--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
          <label for="pass">PASSWORD:</label>
          <input type="PASSWORD" placeholder="ENTER THE PASSWORD" id="pass"  name="PASSWORD" autocomplete="true" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" required><br>
         <label for="pn">phone:</label>
-        <input type="phone" autocomplete="true" placeholder="ENTER YOUR NUMBER" id="pn" pattern="[0-9][10]" required>
+        <input type="phone" autocomplete="true" placeholder="ENTER YOUR NUMBER" id="pn" pattern="[0-9]{10}" required>
         <br>
         <label for="gender">gender:</label><br>
         <label for="gender">1.male</label>
